<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elvin.whatsapp_chatactivity.TabActivity">
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_brroadcast"
        android:orderInCategory="100"
        android:title="@string/action_new_broadcast"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_whatsapp_web"
        android:orderInCategory="100"
        android:title="@string/action_whatsapp_web"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_starred_messages"
        android:orderInCategory="100"
        android:title="@string/action_starred_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        app:showAsAction="never" />
</menu>
